--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -8,6 +8,7 @@ dependencies:
     - ipython==7.7.0
     - matplotlib==3.1.1
     - networkx==2.3
+    - scikit-learn==0.20.3
     - nilearn==0.5.2
     - notebook==6.0.1
     - nxviz==0.6.1
